--- a/paper/CADE/sources.bib
+++ b/paper/CADE/sources.bib
@@ -55,18 +55,13 @@
   pages     = {126--136},
   publisher = {Springer},
   year      = {1998},
-  url       = {https://doi.org/10.1007/3-540-46508-1\_8},
   doi       = {10.1007/3-540-46508-1\_8},
-  timestamp = {Tue, 14 May 2019 10:00:49 +0200},
-  biburl    = {https://dblp.org/rec/conf/ftp/CantoneZ98.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{tableau_quantifier_free,
   title={A Tableau Calculus for Quantifier-Free Set Theoretic Formulae},
   ISBN={9783540697787},
   ISSN={0302-9743},
-  url={http://dx.doi.org/10.1007/3-540-69778-0_16},
   DOI={10.1007/3-540-69778-0_16},
   journal={Automated Reasoning with Analytic Tableaux and Related Methods},
   publisher={Springer},
@@ -150,7 +145,6 @@
   address="New York, NY",
   isbn="978-1-4612-2360-3",
   doi="10.1007/978-1-4612-2360-3_3",
-  url="https://doi.org/10.1007/978-1-4612-2360-3_3"
 }
 
 @inproceedings{presburger,
@@ -165,11 +159,7 @@
   pages     = {367--380},
   publisher = {Springer},
   year      = {2005},
-  url       = {https://doi.org/10.1007/11591191\_26},
   doi       = {10.1007/11591191\_26},
-  timestamp = {Tue, 14 May 2019 10:00:55 +0200},
-  biburl    = {https://dblp.org/rec/conf/lpar/ChaiebN05.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{arithmetic,
@@ -183,11 +173,7 @@
   pages     = {528--540},
   publisher = {Springer},
   year      = {2006},
-  url       = {https://doi.org/10.1007/11814771\_43},
   doi       = {10.1007/11814771\_43},
-  timestamp = {Tue, 14 May 2019 10:00:39 +0200},
-  biburl    = {https://dblp.org/rec/conf/cade/Chaieb06.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @InProceedings{orders,
@@ -211,12 +197,8 @@
   series    = {Monographs in Computer Science},
   publisher = {Springer},
   year      = {2001},
-  url       = {https://doi.org/10.1007/978-1-4757-3452-2},
   doi       = {10.1007/978-1-4757-3452-2},
   isbn      = {978-1-4419-2905-1},
-  timestamp = {Tue, 16 May 2017 14:24:21 +0200},
-  biburl    = {https://dblp.org/rec/series/mcs/CantoneOP01.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{mlss_cartesian_map,
@@ -232,9 +214,6 @@
   publisher = {CEUR-WS.org},
   year      = {2010},
   url       = {http://ceur-ws.org/Vol-598/paper11.pdf},
-  timestamp = {Wed, 12 Feb 2020 16:44:22 +0100},
-  biburl    = {https://dblp.org/rec/conf/cilc/CantoneLA10.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 
@@ -245,8 +224,7 @@ journal = {Communications on Pure and Applied Mathematics},
 volume = {33},
 number = {5},
 pages = {599-608},
-doi = {https://doi.org/10.1002/cpa.3160330503},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cpa.3160330503},
+doi = {10.1002/cpa.3160330503},
 year = {1980}
 }
 
@@ -258,7 +236,6 @@ publisher = {Springer},
 volume = {6},
 number = {2},
 issn = {0168-7433},
-url = {https://doi.org/10.1007/BF00245817},
 doi = {10.1007/BF00245817},
 journal = {Journal of Automated Reasoning},
 pages = {173–187},
@@ -284,8 +261,7 @@ pages = {49-60},
 year = {2003},
 note = {International Workshop on First-Order Theorem Proving},
 issn = {1571-0661},
-doi = {https://doi.org/10.1016/S1571-0661(04)80652-2},
-url = {https://www.sciencedirect.com/science/article/pii/S1571066104806522},
+doi = {10.1016/S1571-0661(04)80652-2},
 author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
 }
 
@@ -301,11 +277,7 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
   pages     = {97--112},
   publisher = {Springer},
   year      = {1999},
-  url       = {https://doi.org/10.1007/3-540-48754-9\_12},
   doi       = {10.1007/3-540-48754-9\_12},
-  timestamp = {Tue, 14 May 2019 10:00:54 +0200},
-  biburl    = {https://dblp.org/rec/conf/tableaux/CantoneZ99.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @misc{modal_logic_lean,
@@ -359,5 +331,58 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
   pages="231--245",
   isbn="978-3-319-21401-6",
   doi="10.1007/978-3-319-21401-6_15"
+}
+
+@article{completeness_coinductive,
+  author    = {Jasmin Christian Blanchette and
+               Andrei Popescu and
+               Dmitriy Traytel},
+  title     = {Soundness and Completeness Proofs by Coinductive Methods},
+  journal   = {Journal of Automated Reasoning},
+  volume    = {58},
+  number    = {1},
+  pages     = {149--179},
+  year      = {2017},
+  doi       = {10.1007/s10817-016-9391-3},
+}
+
+@inproceedings{sequent_first_order,
+  author    = {Asta Halkj{\ae}r From and
+               Anders Schlichtkrull and
+               J{\o}rgen Villadsen},
+  editor    = {Stefania Monica and
+               Federico Bergenti},
+  title     = {A Sequent Calculus for First-Order Logic Formalized in Isabelle/HOL},
+  booktitle = {Proceedings of the 36th Italian Conference on Computational Logic},
+  series    = {{CEUR} Workshop Proceedings},
+  volume    = {3002},
+  pages     = {107--121},
+  publisher = {CEUR-WS.org},
+  year      = {2021},
+  url       = {http://ceur-ws.org/Vol-3002/paper7.pdf},
+}
+
+
+@InProceedings{ctl_tableau,
+  author="Doczkal, Christian and Smolka, Gert",
+  editor="Klein, Gerwin and Gamboa, Ruben",
+  title="Completeness and Decidability Results for CTL in Coq",
+  booktitle="Interactive Theorem Proving",
+  year="2014",
+  publisher="Springer International Publishing",
+  pages="226--241",
+  isbn="978-3-319-08970-6",
+  doi = "10.1007/978-3-319-08970-6_15"
+}
+
+@article{synthetic_completeness_afp,
+  author  = {Asta Halkjær From},
+  title   = {Synthetic Completeness},
+  journal = {Archive of Formal Proofs},
+  month   = {January},
+  year    = {2023},
+  note    = {\url{https://isa-afp.org/entries/Synthetic_Completeness.html},
+            Formal proof development},
+  ISSN    = {2150-914x},
 }
 
